workin on texts, going to start projects cards

--- a/contact.html
+++ b/contact.html
@@ -136,26 +136,64 @@
                 </button>
             </div>
         </div>
-        <!--CONTACT START-->
-        <div class="toolSec">
-            <section id="top" class=" toolSection outils container-xxl courses my-6 py-6 pb-0">
-                <div class="container argu argu2 shadow fadeInUp">
-                    <div class="mx-auto mb-5 wow wow2" data-wow-delay="0.1s">
-                        <h1 class=" title secTit secTit0">
-                            Le SNAP vous accompagne
-                        </h1>
-                        <p><strong>
-                                Hybridation, enrichissement, scénarisation : autant de manière d'optimiser vos enseignement à destination de la réussite étudiante.</strong>
+        <!-- Contact Start -->
+        <div id="thisIsContact" class="container-xxl py-6 ">
+            <div class="container">
+                <div class="row g-5  ">
+                    <div class="col-lg-6 wow contactCont fadeInUp" data-wow-delay="0.1s" style="min-height: 450px;">
+                        <div class="position-relative h-100">
+                            <h1 class="display-6 mb-4 aboutTitle">
+                                Le SNAP vous accompagne
+                            </h1>
+                            <p>
+                                Le Service Numérique & d’Accompagnement Pédagogique (SNAP) a pour objectif de <strong>soutenir les enseignants et les enseignants-chercheurs</strong> dans leurs projets pédagogiques avec le numérique comme outil facilitateur.
+                            </p>
+                            <br>
+                            <p class="mb-4">
+                                Notre équipe pluridisciplinaire met à votre disposition son savoir-faire afin de <strong>collaborer à la réussite des étudiants</strong>.</p>
+                            <div class="icoW">
+                                <img src="./img/Ico1.webp" class="iconIntro" alt="Acompagnement numérique" />
+                                <img src="./img/Ico2.webp" class="iconIntro" alt="Acompagnement numérique" />
+                            </div>
+                            <p class="mb-4">
+                                Notre travail, adapté à vos obligations et besoins spécifiques, s’articule autour de la <strong>création</strong>, de l’<strong>innovation</strong> et de l’<strong>ingénierie pédagogique</strong> pour répondre ensemble aux nouveaux enjeux de l'enseignement.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 wow contactCont contactCont2 fadeInUp" data-wow-delay="0.5s">
+                        <h1 class="display-6 mb-4 aboutTitle aboutTitleCont">
+                            Nous contacter</h1>
+                        <!--<h1 class="display-6 mb-4">N'hésitez pas à nous contacter</h1><-->
+                        <p class="mb-4"> Que vous souhaitiez prendre rendez-vous pour un accompagnement personnalisé, nous poser une question concernant la prise en main des outils multimédias, de la plateforme en ligne, ou solliciter une présentation des équipements numériques disponibles dans les salles de cours
+
+                        Vous pouvez nous contacter au moyen du formulaire ci-dessous ou en cliquant sur notre adresse mail.                        </p>
+                        <p class="mb-2">
+                            <i class="fa fa-envelope me-3"></i>
+                            <a href="mailto:snap@unimes.fr">snap@unimes.fr
+                            </a>
                         </p>
-                        <br>
-                        <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                        </p>
+                        <div class="formWrapper">
+                            <form target="_blank" action="https://formsubmit.co/gillian.brousse@unimes.fr" method="POST">
+                                <div class="form-group">
+                                    <div class="form-row">
+                                        <div class="col">
+                                            <input type="text" name="name" class="form-control" placeholder="Votre nom" required>
+                                        </div>
+                                        <div class="col">
+                                            <input type="email" name="email" class="form-control" placeholder="Votre adresse e-mail" required>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <textarea placeholder="Votre message" class="form-control" name="message" rows="5" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-lg btn-dark btn-block">Envoyer</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
-        <!--CONTACT END-->
+        <!-- Contact End -->
         <!--TEAM-->
         <section id="équipe" class="container-xxl py-6">
             <div class="container">
