--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0">
                     <a href="#top" class="nav-item nav-link active">Accueil</a>
+                    <!--
                     <a href="#actualités" class="nav-item nav-link">Actualités</a>
+                    <-->
                     <a href="#besoins" class="nav-item nav-link">Votre besoin</a>
                     <a href="#réalisations" class="nav-item nav-link">Réalisations</a>
                     <a href="#équipe" class="nav-item nav-link">Équipe</a>
@@ -247,8 +249,7 @@
                             </div>
                             <div class="flip-card-back">
                                 <p>
-                                    Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
+                                    Réflexions et solutions adaptées et innovantes aux nouveaux enjeux de l'apprentissage.
                                 </p>
                             </div>
                         </div>
@@ -295,6 +296,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard  ">
                         <div class="flip-card-inner shadow ">
                             <div class="flip-card-front">
@@ -310,6 +312,7 @@
                             </div>
                         </div>
                     </div>
+                    <-->
                     <div class="flip-card col-lg-3 col-md-6 wow fadeInUp missionCard  ">
                         <div class="flip-card-inner shadow ">
                             <div class="flip-card-front">
@@ -342,6 +345,7 @@
             </div>
         </section>
         <!--ACTU-->
+        <!--
         <section id="actualités" class="container-xxl py-6 about2">
             <div class="container-xxl py-6 fadeInUp">
                 <div class="row g-5 ">
@@ -414,6 +418,7 @@
                 </div>
             </div>
         </section>
+        <-->
         <!--ACTU2-->
         <!--
         <section id="Actualités2" class="container-xxl py-6 Actu">
