--- a/ressources.html
+++ b/ressources.html
@@ -179,33 +179,11 @@
                         </p>
                         <br>
                         <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                        </p>
-                        <br>
-                        <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                        </p>
+                            Que vous souhaitiez hybrider vos enseignement et les mettre à disposition sur la plateforme de cours en ligne, découvrir de nouvelles activités et/ou contenus multimédias  pour enrichir vos cours et dynamiser la participation des apprenants, nous sommes à votre disposition.                          
+                        </p>                        
                     </div>
                 </div>
                 <!--TOOL 1-->
-                <div class="toolWrapper">
-                    <div class="partA shadow">
-                        <a href="./doc/pdfTest.pdf" target="_blank">
-                            <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
-                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
-                    </div>
-                    <div class="partA2"></div>
-                    <div class="partB shadow">
-                        <h2 class=" title toolTit">
-                            Nom outil
-                        </h2>
-                        <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                        </p>
-                    </div>
-                </div>
-                <!--TOOL END-->
-                <!--TOOL-->
                 <div class="toolWrapper">
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
@@ -215,10 +193,29 @@
                     <div class="partA2"></div>
                     <div class="partB shadow">
                         <h2 class=" title toolTit">
-                            Nom outil
+                            Plateforme de cours en ligne
                         </h2>
                         <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                            Une question sur le fonctionnement de la plateforme, un besoin d'accompagnement pour découvrir les spécificités de la nouvelle version, une idée à mettre en pratique ou un bug rencontré ? Découvrez notre documentation, la FAQ directement sur Moodle ou contactez-nous sans hésitation !
+                        </p>
+                    </div>
+                </div>
+                <!--TOOL END-->
+                <!--TOOL-->
+                <div class="toolWrapper">
+                    <div class="partA shadow">
+                        <a href="./doc/pdfTest.pdf" target="_blank">
+                            <img class="img-fluid " src="img/tool2.webp" alt="Optimiser votre parcours pédagogique" />
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
+                    </div>
+                    <div class="partA2"></div>
+                    <div class="partB shadow">
+                        <h2 class=" title toolTit">
+                            H5P
+                        </h2>
+                        <p>
+                            Cet éditeur intuitif vous permet de créer facilement du contenu interactif : Questionnaires vidéo, quizs à choix multiples, textes à trous, visites virtuelles, chronologies, présentations augmentées...
+                            
                         </p>
                     </div>
                 </div>
@@ -233,15 +230,32 @@
                     <div class="partA2"></div>
                     <div class="partB shadow">
                         <h2 class=" title toolTit">
-                            Nom outil
+                           Genially
                         </h2>
                         <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                            Avec Genially, vous pouvez proposer des présentations créatives à partir du contenu que vous avez déjà dans PowerPoint : il vous suffit d'importer votre présentation ppt et vous l'aurez dans votre tableau de bord Genially, prête à être améliorée et/ou animée !
                         </p>
                     </div>
                 </div>
                 <!--TOOL END-->
-                <!--TOOL 1-->
+                          <!--TOOL 1-->
+                <div class="toolWrapper">
+                    <div class="partA shadow">
+                        <a href="./doc/pdfTest.pdf" target="_blank">
+                            <img class="img-fluid " src="img/tool5.webp" alt="Optimiser votre parcours pédagogique" />
+                            <button class="btn btn-primary modalB  shadow"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i>Documentation</button></a>
+                    </div>
+                    <div class="partA2"></div>
+                    <div class="partB shadow">
+                        <h2 class=" title toolTit">
+                            Contenu Vidéo
+                        </h2>
+                        <p>
+                            Créons ensemble le contenu qui vous correspond : Illustration de cours, questionnaires, animations ludiques. Que vous ayez une idée précise du rendu final ou que nous devions travailler ensemble à la scénarisation de votre vidéo, le SNAP est là !
+                        </p>
+                    </div>
+                </div>
+                                <!--TOOL 1-->
                 <div class="toolWrapper">
                     <div class="partA shadow">
                         <a href="./doc/pdfTest.pdf" target="_blank">
@@ -251,10 +265,10 @@
                     <div class="partA2"></div>
                     <div class="partB shadow">
                         <h2 class=" title toolTit">
-                            Nom outil
+                            Infographie/Illustration
                         </h2>
                         <p>
-                            Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                            Parce que parfois, une image vaut mille mots, et qu'une infographie sur mesure répondra toujours plus à vos besoins qu'une image libre de droit... Notre service est en mesure de produire un contenu qui prend en compte vos besoins !
                         </p>
                     </div>
                 </div>
