working on eval in ressources page

--- a/contact.html
+++ b/contact.html
@@ -163,9 +163,7 @@
                         <h1 class="display-6 mb-4 aboutTitle aboutTitleCont">
                             Nous contacter</h1>
                         <!--<h1 class="display-6 mb-4">N'hésitez pas à nous contacter</h1><-->
-                        <p class="mb-4"> Que vous souhaitiez prendre rendez-vous pour un accompagnement personnalisé, nous poser une question concernant la prise en main des outils multimédias, de la plateforme en ligne, ou solliciter une présentation des équipements numériques disponibles dans les salles de cours
-
-                        Vous pouvez nous contacter au moyen du formulaire ci-dessous ou en cliquant sur notre adresse mail.                        </p>
+                        <p class="mb-4"> Que vous souhaitiez prendre rendez-vous pour un accompagnement personnalisé, nous poser une question concernant la prise en main des outils multimédias, de la plateforme en ligne, ou solliciter une présentation des équipements numériques disponibles dans les salles de cours, vous pouvez nous contacter au moyen du formulaire ci-dessous ou en cliquant sur notre adresse mail.                        </p>
                         <p class="mb-2">
                             <i class="fa fa-envelope me-3"></i>
                             <a href="mailto:snap@unimes.fr">snap@unimes.fr
