--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                             <img class="img-fluid" src="img/courses-2.webp" alt="Créer du contenu" />
                             <div class="courses-overlay">
                                 <!--link to -->
-                                <a class="btn btn-outline-primary border-2" href="ressources.html#création">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="ressources.html#optimisation">En savoir plus</a>
                             </div>
                         </div>
                     </div>
@@ -546,14 +546,11 @@
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card4 text-center">
                             <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
+                                Hybridation de cours & infographies - Florence Cibba</p>
                         </div>
-                        <div class=" card5 position-relative mt-auto">
+                        <div class=" card5 position-relative mt-auto cibba">
                             <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
+                                <p> "Je remercie le SNAP pour tout son soutien [...] et je réfléchis à la suite de l'hybridation des mes cours" - Florence Cibba.</p>
                             </div>
                         </div>
                     </div>
@@ -562,14 +559,13 @@
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card4 text-center">
                             <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
+                                Proof of Concept : Tableau Blanc Interactif Salle E202</p>
                         </div>
-                        <div class=" card5 position-relative mt-auto">
+                        <div class=" card5 position-relative mt-auto tbi">
                             <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
+                                <p>
+                                    Intégration d'un Tableau Blanc Intéracitf en Salle E202 sur le site Vauban : Organisation, mise en place, accompagnement des enseignants et suivi du POC.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -578,14 +574,12 @@
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card4 text-center">
                             <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
+                                Accompagnement personnalisé - Florence Dumas</p>
                         </div>
-                        <div class=" card5 position-relative mt-auto">
+                        <div class=" card5 position-relative mt-auto accomp">
                             <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
+                                <p>"Je suis tout à fait satisfaite de l’accompagnement. En fait, non seulement il m’a semblé indispensable sur l’aspect pratico-pratique [...] mais également sur l’aspect de l’engagement." - Florence Dumas
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -594,62 +588,11 @@
                     <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
                         <div class="card4 text-center">
                             <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
+                                Accompagnement personnalisé - Patrizia Giannoni</p>
                         </div>
-                        <div class=" card5 position-relative mt-auto">
+                        <div class=" card5 position-relative mt-auto accomp">
                             <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 card3 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card4 text-center">
-                            <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
-                        </div>
-                        <div class=" card5 position-relative mt-auto">
-                            <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 card3 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card4 text-center">
-                            <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
-                        </div>
-                        <div class=" card5 position-relative mt-auto">
-                            <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class=" card2 card3 col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="  courses-item shadow d-flex flex-column  overflow-hidden h-100">
-                        <div class="card4 text-center">
-                            <p>
-                                Activité H5P sur la plateforme de cours en ligne - Mme CIBBA</p>
-                        </div>
-                        <div class=" card5 position-relative mt-auto">
-                            <div class="courses-overlay">
-                                <p> Dolores sed duo clita tempor justo dolor et
-                                    stet lorem kasd labore dolore lorem ipsum.
-                                    At lorem lorem magna ut et, nonumy et labore
-                                    et tempor diam tempor erat.</p>
+                                <p> "Le SNAP a su me suivre et proposer des solutions en fonction de mes besoins." - Patrizia Giannoni</p>
                             </div>
                         </div>
                     </div>
